--- a/style.css
+++ b/style.css
@@ -576,6 +576,16 @@ button {
   animation: spinner 1s infinite linear;
 }
 
+.error__message {
+  color: red;
+  padding: 10px;
+  text-align: center;
+  margin-top: 30px;
+  opacity: 0.7;
+  text-transform: uppercase;
+  font-style: italic;
+}
+
 /* MEDIA QUERIES */
 @media (max-height: 925px) {
   .body {
